[project]
name = "antigravity-mcp-csv-add-deduplicate"
version = "0.1.0"
description = "MCP server for LinkedIn prospecting CSV operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.1",
    "pandas>=2.1.0",
]

[project.scripts]
linkedin-prospecting-csv = "linkedin_prospecting_csv.server:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_prospecting_csv"]
